horizontal-overflow and gallery img height fix

--- a/Gallery/style.css
+++ b/Gallery/style.css
@@ -6,6 +6,10 @@ body {
   box-sizing: border-box;
 }
 
+html,body {
+  overflow-x: hidden;
+}
+
 .body {
   width: 90%;
   margin: 0 auto;
@@ -44,23 +48,22 @@ body {
   background-color: #770022;
 }
 
-.demo-gallery{
-  display:flex;
-  flex-direction: row;
+.demo-gallery {
+  display: flex;
   flex-wrap: wrap;
 }
 
 .gallery-image {
-  width:30%;
+  width: 30%; 
   position: relative;
   overflow: hidden;
-  margin: 5px; /* Adjust the margin as needed */
+  margin: 5px;
   transition: transform 0.3s, filter 0.3s;
 }
 
 .gallery-image img {
   width: 100%;
-  height: 200px;
+  height: 100%;
   display: block;
 }
 
@@ -69,100 +72,9 @@ body {
   cursor: pointer;
 }
 
-.images {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.images img {
-  width: calc(33.33% - 10px); /* 10px is the total margin (5px on each side) */
-  margin:5px;
-  /* box-sizing: border-box; */
-  transition: transform 0.3s, filter 0.3s;
-}
-
-.images img:hover {
-  transform: scale(1.06);
-  filter: grayscale(60%);
-  cursor: pointer;
-}
-
-.lightbox-container {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.lightbox-close {
-  color: #990033;
-  font-size: 60px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-.lightbox-close:hover {
-  cursor: pointer;
-}
-
-.lightbox-content {
-  max-width: 90vw; /* Adjust the percentage as needed */
-  max-height: 90vh; /* Adjust the percentage as needed */
-  margin: auto;
-  position: relative;
-}
-
-.lightbox-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.lightbox-content a {
-  color: #990033;
-  font-size: 40px;
-}
-
-.lightbox-content a:hover {
-  cursor: pointer;
-}
-
-.lightbox-image {
-  max-width: 80vw;
-  max-height: 80vh;
-  min-width: 80vw;
-}
-
-.lightbox-prev,
-.lightbox-next {
-  font-size: 24px;
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: 40px;
-  height: 40px;
-  margin-top: -20px;
-  color: white;
-  text-decoration: none;
-}
-
-.lightbox-prev {
-  left: -50px;
-}
-
-.lightbox-next {
-  right: -50px;
-}
-
 .footer {
   display: flex;
-  width:100vw;
+  width: 100vw;
   background-color: #990033;
   justify-content: space-between;
   color: #fff;
@@ -180,4 +92,3 @@ body {
   font-size: 40px;
   margin-right: 20%;
 }
-
