--- a/Home/style.css
+++ b/Home/style.css
@@ -148,6 +148,11 @@ body {
 body{
   margin:0px;
 }
+
+html, body {
+  overflow-x: hidden;
+}
+
 .footer {
   display: flex;
   width:100vw;
