--- a/wines/Details/details.css
+++ b/wines/Details/details.css
@@ -94,6 +94,10 @@ body{
   margin:0px;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 .footer {
   display: flex;
   width:100vw;
