--- a/wines/style.css
+++ b/wines/style.css
@@ -50,6 +50,10 @@ body{
   margin:0px;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 .footer {
   display: flex;
   width:100vw;
